# Vapoursynth-spanns

./: .gitignore  README.md  meson.build
spanns/: spanns.cpp  spanns.py
